fix: 段階2実行とUI表示の不具合を修正
段階3UIの一元制御、段階2の実行・進捗表示、回帰テストの安定化をまとめて反映する。

Co-authored-by: Cursor <cursoragent@cursor.com>