@@ -5,6 +5,7 @@ import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 import org.junit.jupiter.api.Test;
@@ -53,7 +54,8 @@ class RdpLaunchProfileSequentialRunTest {
     @Test
     void normalizeSelection_preservesOrderWithoutDuplicates() {
         List<Integer> normalized =
-                RdpLaunchProfileSequentialRun.normalizeSelection(List.of(1, 2, 2, 3, null, 0));
+                RdpLaunchProfileSequentialRun.normalizeSelection(
+                        Arrays.asList(1, 2, 2, 3, null, 0));
         assertEquals(List.of(1, 2, 3), normalized);
     }
 
